feat(product): add new products
- admin can add new products

[Delivers: #170909404]
